# synfig

./: .travis.yml  1-setup-osx-brew.sh  1-setup-windows-msys2.sh  CMakeLists.txt  sider.yml  sonar-project.properties
.github/workflows/: main.yml
ETL/ETL/: _pen.h
autobuild/: build-cmake-common.sh
synfig-core/: CMakeLists.txt  configure.ac
synfig-core/src/: CMakeLists.txt
synfig-core/src/ETL/: etl_config.h
synfig-core/src/modules/: CMakeLists.txt
synfig-core/src/modules/lyr_std/: curvewarp.cpp  perspective.cpp  shade.cpp  sphere_distort.cpp  supersample.cpp  twirl.cpp  xorpattern.cpp
synfig-core/src/modules/mod_bmp/: mptr_bmp.cpp
synfig-core/src/modules/mod_example/: metaballs.cpp
synfig-core/src/modules/mod_ffmpeg/: mptr_ffmpeg.cpp
synfig-core/src/modules/mod_filter/: blur.cpp  colorcorrect.cpp  halftone2.cpp  halftone3.cpp  lumakey.cpp  radialblur.cpp
synfig-core/src/modules/mod_gif/: trgt_gif.cpp
synfig-core/src/modules/mod_gradient/: conicalgradient.cpp  lineargradient.cpp  radialgradient.cpp  spiralgradient.cpp
synfig-core/src/modules/mod_jpeg/: mptr_jpeg.cpp
synfig-core/src/modules/mod_mng/: trgt_mng.cpp
synfig-core/src/modules/mod_noise/: distort.cpp  noise.cpp  valuenode_random.cpp
synfig-core/src/modules/mod_particle/: plant.cpp
synfig-core/src/modules/mod_png/: main.cpp  mptr_png.cpp
synfig-core/src/modules/mod_ppm/: mptr_ppm.cpp
synfig-core/src/modules/mod_svg/: svg_parser.cpp
synfig-core/src/modules/mod_yuv420p/: trgt_yuv.cpp
synfig-core/src/synfig/: CMakeLists.txt  blur.cpp  filecontainerzip.cpp  gradient.h  loadcanvas.cpp  main.cpp  palette.cpp  target_scanline.cpp  target_tile.cpp
synfig-core/src/synfig/color/: color.cpp  color.h  color.hpp  colormatrix.h  common.h  (+1 more)
synfig-core/src/tool/: CMakeLists.txt  joblistprocessor.cpp  main.cpp  optionsprocessor.cpp  optionsprocessor.h
synfig-studio/: configure.ac
synfig-studio/images/: CMakeLists.txt
synfig-studio/src/: CMakeLists.txt
synfig-studio/src/gui/: CMakeLists.txt  app.cpp  asyncrenderer.cpp  duckmatic.cpp  duckmatic.h  instance.cpp  renddesc.cpp  render.cpp  workarea.cpp
synfig-studio/src/synfigapp/: inputdevice.cpp
(+23 files in other folders)
